test/SemanticAnalysis/LifetimeMethods/InvalidConstnessSetDead.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__setdead' has incorrect const predicate
	void __setdead() const noexcept { }
}

// CHECK: 1 error generated.
